--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
             </div>
             <br><br><br>
             <div class="container">
+                <label class="checkbox-inline"><input type="checkbox" value="">Text (everything not related to audio, video, images)</label>
               <label class="checkbox-inline"><input type="checkbox" value="">Audio</label>
               <label class="checkbox-inline"><input type="checkbox" value="">Video</label>
               <label class="checkbox-inline"><input type="checkbox" value="">Images</label>
