reads file and displays as http response

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/css/bootstrap.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/js/bootstrap.js"></script>
+    <script src="{% static 'index.js' %}"></script>
 </head>
 <body>
     {% load widget_tweaks %}
@@ -45,7 +46,7 @@
             <tbody>
             {% for doc in resultFiles%}
                 <tr>
-                    <td><a href="file://{{ doc.get_file_path }}">{{ doc.get_file_path }}</a></td>
+                    <td><a class="file_link">{{ doc.get_file_path }}</a></td>
                     <td>{{ doc.get_file_size|div:"1000" }}</td>
                     <td>{{ doc.get_create_date }}</td>
                     <td>{{ doc.get_edit_date }}</td>
