--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,8 @@
                 <tr>
                     <td><a class="file_link">{{ doc.get_file_path }}</a></td>
                     <td>{{ doc.get_file_size|div:"1000"|to_int }}</td>
-                    <td><span>{{doc.get_parse_date|dateToISO}}</span>{{ doc.get_parse_date }}</td>
                     <td><span>{{doc.get_create_date|dateToISO}}</span>{{ doc.get_create_date }}</td>
+                    <td><span>{{doc.get_edit_date|dateToISO}}</span>{{ doc.get_edit_date }}</td>
                 </tr>
             {% endfor %}
             </tbody>
