--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -6,10 +6,13 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'inspect.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/css/bootstrap.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput-typeahead.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script src="{% static 'inspect.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
+    <script src="{% static 'inspect.js' %}" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
@@ -24,9 +27,7 @@
         </div>
         <div id="tags">
             <h2>Tags</h2>
-            {% for tag in tags %}
-                <div class="tag">{{ tag }}</div>
-            {% endfor %}
+            <input type="text" id="tagInput" value="" data-role="tagsinput"/>
         </div>
         <div id="duplicates">
             <h2>Duplicates</h2>
