added some to html

--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -34,7 +34,7 @@
         <div id="duplicates">
             <h2>Duplicates</h2>
             {% for doc in dups %}
-                <a>{{ doc.get_file_path }}</a>
+                <b>file path: <b></b><a>{{ doc.get_file_path }}</a><br>
             {% endfor %}
         </div>
     </div>
