--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -13,10 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
     <script src="{% static 'inspect.js' %}" type="text/javascript"></script>
-    <script type="text/javascript">
-        let js_tags = "{{js_tags|safe}}";
-        console.log('js_tags: ' + js_tags);
-    </script>
 </head>
 <body>
     <div class="container">
@@ -33,7 +29,7 @@
         </div>
         <div id="tags">
             <h2>Tags</h2>
-            <input type="text" id="tagInput" value="" data-role="tagsinput"/>
+            <input type="text" id="tagInput" value="{{ tagStr }}" data-role="tagsinput"/>
             <button id="submitTag">Add New Tags</button>
         </div>
         <div id="duplicates">
