--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -29,7 +29,7 @@
         </div>
         <div id="tags">
             <h2>Tags</h2>
-            <input type="text" id="tagInput" value="{{ tagStr }}" data-role="tagsinput"/>
+            <input type="text" id="tagInput" value="{{ tags }}" data-role="tagsinput"/>
             <button id="submitTag">Add New Tags</button>
         </div>
         <div id="duplicates">
