--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -15,6 +15,7 @@
     <script src="{% static 'inspect.js' %}" type="text/javascript"></script>
 </head>
 <body>
+    <a href="http://ceas-e384d-dev1.cs.uwm.edu:8000/">Home</a>
     <div class="container">
         <h1>File Details:</h1>
         <hr>
