remove tags button

--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -31,7 +31,7 @@
         <div id="tags">
             <h2>Tags</h2>
             <input type="text" id="tagInput" value="{{ tags }}" data-role="tagsinput"/>
-            <button id="submitTag">Save Tags</button>
+            <!--<button id="submitTag">Save Tags</button>-->
         </div>
         <div id="duplicates">
             <h2>Duplicates</h2>
