--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                 <tr>
                     <td  style="display:none;"></td>
                     <td><a href="{% url 'details-view' doc.file_id %}" class="file_link">{{ doc.get_file_path }}</a></td>
-                    <td>{{ doc.get_file_size|div:"1000"|to_int }}</td>
+                    <td>{{ doc.get_pretty_file_size }}</td>
                     <td><span>{{doc.get_create_date|dateToISO}}</span>{{ doc.get_create_date }}</td>
                     <td><span>{{doc.get_edit_date|dateToISO}}</span>{{ doc.get_edit_date }}</td>
                 </tr>
