Pretty file sizes

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
               <tr>
                 <th style="display:none;"></th>
                 <th>Document</th>
-                <th>Size (Kilo Bytes)</th>
+                <th>Size</th>
                 <th>Date Created</th>
                 <th>Date Modified</th>
               </tr>
