added form field for search by option

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
                 <span class="glyphicon glyphicon-search"></span>
               </button>
             </div>
+            {{ form.search_by }}
             <br><br><br>
           </form>
     </div>
